# kr_mav_control

./: '
interfaces/kr_betaflight_interface/: CMakeLists.txt  package.xml
interfaces/kr_betaflight_interface/config/: gains.yaml  neurofly.yaml  neurofly_1804.yaml  trackers.yaml
interfaces/kr_betaflight_interface/include/kr_betaflight_interface/: protocol_bridge_base.h  protocol_msg_base.h
interfaces/kr_betaflight_interface/include/kr_betaflight_interface/crsf/: crsf_bridge.h  crsf_msg.h  crsf_serial_port.h
interfaces/kr_betaflight_interface/include/kr_betaflight_interface/sbus/: sbus_bridge.h  sbus_channel_mapping.h  sbus_msg.h  sbus_serial_port.h
interfaces/kr_betaflight_interface/launch/: betaflight_interface.launch.py  control.launch.py
interfaces/kr_betaflight_interface/scripts/: compute_rpm_throttle.py
interfaces/kr_betaflight_interface/src/: so3cmd_to_betaflight_component.cpp
interfaces/kr_betaflight_interface/src/crsf/: crsf_bridge.cpp  crsf_msg.cpp  crsf_serial_port.cpp
interfaces/kr_betaflight_interface/src/sbus/: sbus_bridge.cpp  sbus_msg.cpp  sbus_serial_port.cpp
interfaces/kr_crazyflie_interface/: CMakeLists.txt
interfaces/kr_crazyflie_interface/launch/: cf_test.launch.py  control.launch.py  test.launch.py  test.launch.yaml
interfaces/kr_crazyflie_interface/src/: so3cmd_to_crazyflie_component.cpp
interfaces/kr_crsf_interface/: CMakeLists.txt  nodelet_plugin.xml  package.xml
interfaces/kr_crsf_interface/include/kr_crsf_interface/: crsf_bridge.h  crsf_channel_mapping.h  crsf_msg.h  crsf_serial_port.h  crsf_thrust_mapping.h
interfaces/kr_crsf_interface/launch/: crsf_interface.launch.py
interfaces/kr_crsf_interface/msg/: CrsfRosMessage.msg
interfaces/kr_crsf_interface/scripts/: mavlink_telemetry.py
interfaces/kr_crsf_interface/src/: crsf_bridge.cpp  crsf_msg.cpp  crsf_serial_port.cpp  crsf_thrust_mapping.cpp  so3cmd_to_crsf_component.cpp
interfaces/kr_sbus_interface/: CMakeLists.txt  nodelet_plugin.xml  package.xml
interfaces/kr_sbus_interface/cmake/: FindSnav.cmake
interfaces/kr_sbus_interface/config/: gains.yaml  mav_manager_params.yaml  neurofly.yaml  tracker_params.yaml  trackers.yaml
interfaces/kr_sbus_interface/include/kr_sbus_interface/: channel_mapping.h  sbus_bridge.h  sbus_msg.h  sbus_serial_port.h  thrust_mapping.h
interfaces/kr_sbus_interface/launch/: control.launch.py  sbus_interface.launch  sbus_interface.launch.py  sbus_interface.py  test.launch
interfaces/kr_sbus_interface/msg/: SbusRosMessage.msg
interfaces/kr_sbus_interface/parameters/: default.yaml  neurofly.yaml  orin.yaml  race_quad.yaml
interfaces/kr_sbus_interface/src/: sbus_bridge.cpp  sbus_msg.cpp  sbus_serial_port.cpp  so3cmd_to_sbus_component.cpp  so3cmd_to_sbus_nodelet.cpp  thrust_mapping.cpp
kr_mav_controllers/src/: SO3Control.cpp  so3_control_component.cpp
kr_mav_launch/launch/: demo_sbus.launch  sbus_interface.launch
kr_mav_manager/: CMakeLists.txt  package.xml
kr_mav_manager/include/kr_mav_manager/: manager.hpp  mav_manager_services.hpp
kr_mav_manager/src/: manager.cpp  mav_services.cpp  sample_sub.cpp
rqt_mav_manager/rqt_mav_manager/: __init__.py
trackers/kr_tracker_msgs/: CMakeLists.txt
trackers/kr_tracker_msgs/action/: PolyTracker.action
trackers/kr_trackers/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
trackers/kr_trackers/include/kr_trackers/: Tracker.hpp  initial_conditions.hpp  lissajous_generator.h  traj_gen.h
trackers/kr_trackers/scripts/: twist_to_velocity_goal.py  waypoints_to_action.py
trackers/kr_trackers/src/: circle_tracker_server.cpp  initial_conditions.cpp  line_tracker_distance_server.cpp  line_tracker_min_jerk_server.cpp  line_tracker_trapezoid.cpp  line_tracker_yaw.cpp  lissajous_adder_server.cpp  lissajous_generator.cpp  lissajous_tracker_server.cpp  null_tracker.cpp  poly_tracker.cpp  smooth_vel_tracker_server.cpp  trajectory_tracker.cpp  velocity_tracker.cpp
trackers/kr_trackers/utils/: traj_data.hpp
trackers/kr_trackers_manager/: CMakeLists.txt  README.md  package.xml
trackers/kr_trackers_manager/config/: trackers_manager.yaml
trackers/kr_trackers_manager/launch/: example.launch.py
trackers/kr_trackers_manager/src/: lifecycle_manager.cpp  trackers_manager.cpp
