<?xml version="1.0"?>
<package format="2">
  <name>kr_crsf_interface</name>
  <version>0.0.0</version>
  <description>The kr_crsf_interface package</description>

  <maintainer email="dexterong94@gmail.com">Dexter Ong</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend> 
  <depend>kr_mav_msgs</depend>
  <depend>tf2</depend>
  <depend>roscpp</depend>
  <depend>rclcpp_components</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
