<?xml version="1.0"?>
<package format="2">
  <name>kr_sbus_interface</name>
  <version>0.0.0</version>
  <description>The kr_sbus_interface package</description>

  <maintainer email="odexter@seas.upenn.edu">Dexter Ong</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>kr_mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
