<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kr_trackers</name>
  <version>2.0.0</version>
  <description>kr_trackers</description>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="michael.f.watterson@gmail.com">Michael Watterson</maintainer>
  <maintainer email="justinthomas@jtwebs.net">Justin Thomas</maintainer>
  <maintainer email="kashishgarg9@gmail.com">Kashish Garg</maintainer>
  <maintainer email="pranavpshah2098@gmail.com">Pranav Shah</maintainer>

  <license>BSD</license>

  <author>Kartik Mohta</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>kr_mav_msgs</depend>
  <depend>kr_tracker_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rcutils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
